--- a/main/res/layout/content_settings.xml
+++ b/main/res/layout/content_settings.xml
@@ -38,7 +38,7 @@
                     android:text="Włączona filtracja:"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/switch2"
+                    android:id="@+id/kalman_filtration_switch"
                     android:textSize="18sp"
                     android:textColor="#737373"/>
 
@@ -85,6 +85,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/update_interval_bar"
+                    android:max="10"
                     android:layout_weight="0.2" />
 
 
@@ -123,14 +124,15 @@
                     android:text="1000"
                     android:ems="10"
                     android:textSize="25sp"
-                    android:id="@+id/editText04"
+                    android:id="@+id/update_delay_field"
                     android:gravity = "center"
                     android:textColor="#737373"/>
 
             <SeekBar
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/seekBar3"
+                    android:id="@+id/update_delay_bar"
+                    android:max="10"
                     android:layout_weight="0.2" />
 
         </LinearLayout>
@@ -168,14 +170,15 @@
                     android:text="0.0001"
                     android:ems="10"
                     android:textSize="25sp"
-                    android:id="@+id/editText05"
+                    android:id="@+id/sigma_value_field"
                     android:gravity = "left"
                     android:textColor="#737373"/>
 
             <SeekBar
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/seekBar4"
+                    android:id="@+id/sigma_value_bar"
+                    android:max="100"
                     android:layout_weight="0.2" />
 
         </LinearLayout>
@@ -213,14 +216,15 @@
                     android:text="0.001"
                     android:ems="10"
                     android:textSize="25sp"
-                    android:id="@+id/editText06"
+                    android:id="@+id/ro_value_field"
                     android:gravity = "center"
                     android:textColor="#737373"/>
 
             <SeekBar
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/seekBar5"
+                    android:id="@+id/ro_value_bar"
+                    android:max="100"
                     android:layout_weight="0.2" />
 
         </LinearLayout>
